# samples

c++11/cond_variable/: cond_variable.pro  main.cpp
c++11/future/: main.cpp
c++11/general_sample/: CMakeLists.txt  c++11.pro  main.cpp
c++11/gettoken/: main.cpp
c++11/hello_regex/: main.cpp
c++11/lambda/: main.cpp
c++11/pattern/bridge/: main.cpp
c++11/pattern/mediator/: destination.h  filesource.cpp  filesource.h  logdestination.cpp  logdestination.h  main.cpp  mediator.cpp  mediator.h  mediator.pro  mediatorimpl.cpp  mediatorimpl.h  source.cpp  source.h
c++11/raii/: main.cpp
c++11/threadpool/: main.cpp
design_pattern/mediator/: chatroom.cpp  chatroom.h  main.cpp  mediator.pro  person.cpp  person.h
design_pattern/singleton/: main.cpp  singleton.pro
design_pattern/state/: brokenstate.cpp  brokenstate.h  lightdevice.cpp  lightdevice.h  main.cpp  offstate.cpp  offstate.h  onstate.cpp  onstate.h  state.h  state.pro
design_pattern/visitor/: directory.cpp  directory.h  entry.cpp  entry.h  file.cpp  file.h  main.cpp  visitor.cpp  visitor.h  visitor.pro
igdclient/cmake.build/: readme.txt
igdclient/doc/html/: _i_g_d___client_8h__incl.dot  classes.html  dir_2f56116f5c2b72888cc5cda3c2a7e2c8.html  graph_legend.html
igdclient/doc/html/search/: functions_0.js
igdclient/sample/: main.cpp
igdclient/src/: CMakeLists.txt  IGD_AsyncServerSocket.c  IGD_AsyncSocket.c  IGD_AsyncUDPSocket.c  IGD_SSDPClient.h  IGD_WebClient.h  IGD_WebServer.c  IGD_WebServer.h
network/TcpServerEx/: TcpAcceptor.cpp  TcpAcceptor.h  TcpServerEx.pro  main.cpp  mytypes.h
network/check_ra/: main.cpp
network/destip_to_mac/: main.cpp
network/detect_dad/: main.cpp
network/ethernet_checker/: main.cpp
network/ethernet_list/: main.cpp
network/host_to_ip/: main.c
network/ifupdown/: ifconf.cpp  ifconf.pro
network/mqtt_client/: client_pub.pro  main.cpp
network/read_ra/: main.c
network/send_rs/: main.cpp
network/tcpclient/: CMakeLists.txt  arm-4.8-1.6.cmake  main.c
network/tcpserver/: CMakeLists.txt  main.c
network/tcpserver_dualstack/: CMakeLists.txt  main.cpp
network/uds/client/: CMakeLists.txt  client.c
network/uds/server/: CMakeLists.txt  server.c
network/wifi_checker/: main.cpp
opensource/cppunit/hello/: hello.pro  main.cpp
opensource/glib/g_signal_sample/: g_signal_sample.pro  main.cpp
opensource/glib/helloworld/: Doxyfile  helloworld.pro  main.cpp
opensource/gobject/gmain_loop/: gmain_loop.pro  main.cpp
opensource/gsoap_client/: CMakeLists.txt  calc.h  calcclient.cpp  gsoap-client.pro  soapC.cpp  soapStub.h  soapcalcProxy.cpp  soapcalcProxy.h
opensource/gssdp/discovery/: main.cpp  test_browser.pro
opensource/gstreamer/UrlPlayer/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtPlayer.pro
opensource/gstreamer/gstSamples/: helloGStreamer.pro  main.cpp
opensource/gtest/hello/: hello_gtest.pro  main.cpp  main_test.cpp  mock_sample.cpp  tstory.cpp
opensource/gupnp/gupnp_server/: CMakeLists.txt  WanCommonIfc1.xml  WanIpConn.xml  gupnp_server.pro  huawei_upnp.xml  main.cpp  orange_root.xml  upnpServer.pro~  upnp_device_description.xml  upnp_device_description2.xml  utility.cpp  utility.h
opensource/gupnp/gupnp_server/livebox/: igd2.xml  igd2_6fc.xml  igd2_test.xml  igd2_wic.xml
opensource/gupnp/igd_device/: CMakeLists.txt  igd_device.pro  igddevice.cpp  igddevice.h  main.cpp  menumanager.cpp  utility.cpp  utility.h
opensource/igdclient/: CMakeLists.txt
opensource/igdclient/cmake.build/: toolchain_template.cmake
opensource/igdclient/doc/html/: _i_g_d___client_8h.html  _i_g_d___client_8h__incl.md5  _i_g_d___client_8h_source.html  annotated.html  files.html  globals.html  globals_func.html  index.html  structigd__handle__tag-members.html  structigd__handle__tag.html
opensource/igdclient/doc/html/search/: all_0.js  classes_0.js  files_0.js  searchdata.js
opensource/igdclient/sample/: CMakeLists.txt  igdclient.pro
opensource/igdclient/src/: IGD_AsyncServerSocket.h  IGD_AsyncSocket.h  IGD_AsyncUDPSocket.h  IGD_Client.h  IGD_ControlPoint.c  IGD_ControlPoint.h  IGD_ControlPointStructs.h  IGD_Parsers.c  IGD_Parsers.h  IGD_SSDPClient.c  IGD_WebClient.c
opensource/libsoup/http_client/: http_client.pro  main.cpp
opensource/libsoup/http_server/: http_server.pro  main.cpp
opensource/libxml/: hello.pro  main.cpp  test.xml
opensource/log4cxx/hello/: hello.pro  log4cxx.conf  main.cpp
opensource/protobuf/hello/: CMakeLists.txt  hello.pro  hello.proto  main.cpp
opensource/protobuf/hello/cpp/: hello.pb.cc  hello.pb.h
scripts/: RabbitVCS.py  cmake-cleanup.sh  cmake-create.sh  install.sh  install_dualstack.sh  qtmake.sh
util/cli/: helloCLI.pro  main.cpp  menumanager.cpp  menumanager.h
util/colorText/: main.cpp
util/getopt/: main.cpp
util/inotify/: main.cpp
util/timer/: main.cpp
vscode/cmake/: CMakeLists.txt  main.cpp  readme.txt
vscode/hello/: logger.cpp  logger.h  main.cpp
(+4 files in other folders)
